# Programovanie_3-Projekt

./: CMakeLists.txt  README.md
Google_tests/: CMakeLists.txt  CharacterTest.cpp  LoadTest.cpp  MapTest.cpp
ProjectGame/: README.txt
ProjectGame/Google_tests/: GameTest.cpp
ProjectGame/ProjectGame_lib/: CMakeLists.txt  Game.h  Item.cpp  Item.h  Klass.h  Load.cpp  Load.h
ProjectGame_lib/: Character.cpp  Character.h  Character_Mage.txt  Character_Warrior.txt  Game.cpp  HouseOfDoom.txt  Klass.cpp  Map.cpp  Map.h  Room.cpp  Room.h  Spell.cpp  Spell.h  Stats.h
